# Substrate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
crates/executioner-cli/: Cargo.toml
crates/executioner-cli/src/: main.rs
crates/executioner-core/: Cargo.toml
crates/executioner-core/src/: effects.rs  error.rs  host.rs  lib.rs  protocol.rs  tools.rs  workspace.rs
crates/executioner-core/tests/: full_tool_set.rs  read_write.rs
crates/executioner-host/: Cargo.toml
crates/executioner-host/src/: lib.rs
crates/executioner-sdk/: Cargo.toml
crates/executioner-sdk/src/: lib.rs
crates/executioner-worker/: Cargo.toml
crates/executioner-worker/src/: lib.rs
docs/: agent-adapter.md  architecture.md  lifecycle.md  packaging.md
examples/: agent_loop.py  agent_loop.ts  minimal.py  minimal.ts  new-session.json  tool-invocation.json
schema/: README.md
