[package]
name = "executioner-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
executioner-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
http.workspace = true
tempfile.workspace = true
